split methods writing FieldHeader and data & let putFieldHeader(FieldDescription)
N.B. for the time being the simplified interfaces like 'put(String fieldName, <datatype data, ...)' are deprecated in order to simplify refactoring but maybe added later as convenience methods